--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "firebase": "^10.8.0",
     "formik": "^2.4.5",
     "next": "14.1.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
